[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Menus/AltInputs.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menus/NetplayMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeB.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeF.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/AppleTea-z8R1a.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/UI/cursor.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeG.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/roboto.black.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=49]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=50]
resource_name = "transit_in"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=68]
resource_name = "transit_to_host"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/HostGameMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=52]
resource_name = "transit_to_main"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/MainMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=69]
resource_name = "transit_to_search"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/SearchGameMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="DynamicFont" id=53]
size = 100
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=55]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=56]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=57]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=58]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[sub_resource type="DynamicFont" id=30]
size = 30
use_filter = true
extra_spacing_top = 13
extra_spacing_bottom = 7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="Theme" id=62]
default_font = SubResource( 30 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 30 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 19 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=66]
size = 20
use_filter = true
extra_spacing_bottom = 7
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=67]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=64]
size = 23
use_filter = true
extra_spacing_top = 13
extra_spacing_bottom = 7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=48]

[sub_resource type="DynamicFont" id=70]
size = 30
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=71]
default_font = SubResource( 70 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 64 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 48 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="NetplayMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="AltInputs" parent="." instance=ExtResource( 1 )]

[node name="Transition" type="AnimationPlayer" parent="."]
autoplay = "transit_in"
anims/RESET = SubResource( 49 )
anims/transit_in = SubResource( 50 )
anims/transit_to_host = SubResource( 68 )
anims/transit_to_main = SubResource( 52 )
anims/transit_to_search = SubResource( 69 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.8, 0.8, 0.8, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="Background"]
margin_left = 128.0
margin_top = 88.0
margin_right = 623.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 53 )
text = "Netplay"

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( 152, 283 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 55 )
anims/default = SubResource( 56 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 57 )
anims/default = SubResource( 58 )

[node name="NetplayList" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 884.0
margin_bottom = 954.0
theme = SubResource( 62 )

[node name="ProfileName" parent="NetplayList" instance=ExtResource( 7 )]
margin_right = 692.0
focus_neighbour_top = NodePath("../Return")

[node name="NameRequired" type="HSplitContainer" parent="NetplayList"]
margin_top = 60.0
margin_right = 692.0
margin_bottom = 87.0
split_offset = 250

[node name="Blank2" type="Label" parent="NetplayList/NameRequired"]
margin_right = 250.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -902, -124 )
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 66 )
align = 1

[node name="Label" type="Label" parent="NetplayList/NameRequired"]
margin_left = 262.0
margin_right = 692.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -902, -124 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 66 )
text = "Profile Name Required"
align = 1

[node name="Blank6" type="Label" parent="NetplayList"]
margin_top = 91.0
margin_right = 692.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 67 )
text = " "

[node name="PortNumber" parent="NetplayList" instance=ExtResource( 7 )]
margin_top = 102.0
margin_right = 692.0
margin_bottom = 158.0

[node name="PortRequired" type="HSplitContainer" parent="NetplayList"]
margin_top = 162.0
margin_right = 692.0
margin_bottom = 189.0
split_offset = 250

[node name="Blank2" type="Label" parent="NetplayList/PortRequired"]
margin_right = 250.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -902, -124 )
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 66 )
align = 1

[node name="Label" type="Label" parent="NetplayList/PortRequired"]
margin_left = 262.0
margin_right = 692.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 66 )
text = "Port Number Required"
align = 1

[node name="Blank3" type="Label" parent="NetplayList"]
margin_top = 193.0
margin_right = 692.0
margin_bottom = 243.0

[node name="Blank2" type="Label" parent="NetplayList"]
margin_top = 247.0
margin_right = 692.0
margin_bottom = 297.0

[node name="Host" parent="NetplayList" instance=ExtResource( 4 )]
margin_top = 301.0
margin_right = 692.0
margin_bottom = 364.0
text = "Host Game"

[node name="Search" parent="NetplayList" instance=ExtResource( 4 )]
margin_top = 368.0
margin_right = 692.0
margin_bottom = 431.0
text = "Search game"

[node name="Return" parent="NetplayList" instance=ExtResource( 3 )]
margin_top = 435.0
margin_right = 692.0
margin_bottom = 491.0
focus_neighbour_bottom = NodePath("../ProfileName")
text = "Return to main menu"

[node name="Instructions" type="Label" parent="."]
margin_left = 992.0
margin_top = 256.0
margin_right = 1856.0
margin_bottom = 1018.0
theme = SubResource( 71 )
custom_colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
text = "Instructions for Hosting:
          - For LAN, just share your private IP with the guest.
          - For WAN, the port (default = 44500) needs to be 
             forwarded in your router in UDP, then share your
             public IP with the guest.
          - You can copy your private and public IP addresses
             at the next screen after pressing \"Host Game\".
          - If you changed the port number, let
             your guest know as well.
          - You may need to configure your firewall as well.
          - If port forwarding is an issue, try virtual LAN services.

Instructions for Joining:	
          - Enter in the port number the host is using.
          - Obtain host's private IP (LAN) or public IP (WAN).
          - Press \"Search Game\" then enter/paste it in.
          - Only the host needs to do port forwarding for WAN.
          - You may need to configure your firewall though."
autowrap = true
